fix: overflow added try3

--- a/src/app/staff/solo/manual-order-modal/checkout-modal/checkout-modal.component.scss
+++ b/src/app/staff/solo/manual-order-modal/checkout-modal/checkout-modal.component.scss
@@ -48,9 +48,9 @@
         }
 
         .content {
-            overflow-y: auto;
+            overflow: auto;
             padding-bottom: 124px;
-            height: auto;
+            height: 100%;
 
             .select {
                 display: flex;
@@ -122,7 +122,6 @@
             }
 
             .cash {
-                overflow-y: auto;
                 .title {
                     height: 32px;
                     display: flex;
@@ -148,7 +147,6 @@
                 }
             }
             .card {
-                overflow-y: auto;
                 .title {
                     height: 32px;
                     display: flex;
